--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,115 +1,13 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <title>Dont Panic</title>
-    <style>
-
-        html,body{
-            margin:0;
-            padding:0;   
-         
-        }
-        
-        h1{
-            margin-top:0;
-            font-size:7vw;
-        }
-
-        
-        
-        /* SOCIAL STYLES */
-        .social-link{
-           background-color: rgba(150,150,150, 0.5);
-           box-sizing: border-box;
-           border-radius: 99px;
-           color: #fff;
-           display: inline-block; 
-           font-family: Helvetica, Arial, sans-serif;
-           font-size: 1 rem;
-           font-weight: bold; 
-           height: 2.5em;
-           line-height: 1;
-           padding-top: 0.85em;
-           text-align: center;
-           text-decoration: none;
-           vertical-align: top;
-           width: 2.5em;
-        }
-
-        .social-list{
-            list-style: none;
-            padding: 0;
-            text-align: center;
-        }
-
-        .social-list > li{
-            display: inline-block;
-            margin: 0 0.5em;
-        }
-
-        .show{
-            display: block;
-        }
-
-
-
-        /* HERO STYLES */
-        .full-hero{
-            background-color: #c7dbfc;
-            height:50vh;
-        }
-
-
-     
-        /* BIO STYLES */
-        .bio-wrapper{
-            font-size: 24px;    
-            overflow: hidden;
-            margin: 50px auto;
-            max-width: 960px;
-        }
-
-        .bio-box{
-            border: 1px solid #000;
-            box-sizing: border-box;
-            float: left;
-            font-size: 1rem;
-            margin: 1%;
-            padding:0 2% 2%;
-            width: 23%;
-        }
-      
-        .bio-box h3{
-            font-size: 1.5em;
-            color: #fff;
-            margin:-40px 0 1em;
-            text-align:center;
-        }
-
-        .bio-box img{
-            width:100%;    
-        }
-     
-        .bio-copy{
-            font-size: 1em;
-            line-height: 1.5;
-        }
-
-        .bio-copy a{
-            color: green;
-        }
-      
-       
-
-
-    </style>
-</head>
+{% include head.html %}
 
 <body>
+    {% include header.html %}
+
     <div class="full-hero hero-home">
-        <h1>This is a change</h1>
+        <h1>h1</h1>
         <ul class="social-list">
             <li>
                 <a href="http://example.com/" class="social-link">FB</a>
@@ -123,14 +21,19 @@
         </ul>
     </div>
 
-    <h2>I'm an h2</h2>
-    
+<h2>THE FOUNDERS</h2>
+<p>
+    Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee Donahoe, and Nick Merwin. We believe that the kind
+    of technical sophistication taught by the Learn Enough tutorials can benefit at least a billion people, and probably
+    more.
+</p>
+<p>Test paragraph</p>
 
     <div class="bio-wrapper">
         <div class="bio-box">
             <img src="http://placekitten.com/g/400/400">
             <h3>Michael Hartl</h3>
-            <a href="http://twitter.com/mhartl" class="social-link show">here</a>
+            <a href="http://twitter.com/mhartl" class="social-link show">Tw</a>
             <p class="bio-copy">
                 Known for his dazzling charm, rapier wit, and unrivaled humility, Michael is the creator of the
                 <a href="http://railstutorial.org/">Ruby on Rails Tutorial
@@ -145,7 +48,7 @@
         <div class="bio-box">
             <img src="http://placekitten.com/g/400/400">
             <h3>Lee Donahoe</h3>
-            <a href="https://twitter.com/leedonahoe"  class="social-link">here</a>
+            <a href="https://twitter.com/leedonahoe"  class="social-link">Tw</a>
             <p class="bio-copy">
                 When he's not literally swimming with sharks or hunting powder stashes on his snowboard, you can find Lee in front of his
                 computer designing interfaces, doing front-end development, or writing some of the interface-related Learn Enough
@@ -155,7 +58,7 @@
         <div class="bio-box">
             <img src="http://placekitten.com/g/400/400">
             <h3>Nick Merwin</h3>
-            <a href="https://twitter.com/nickmerwin"  class="social-link">here</a>
+            <a href="https://twitter.com/nickmerwin"  class="social-link">Tw</a>
         <p class="bio-copy">
                 You may have seen him shredding guitar live with Capital Cities on Jimmy Kimmel, Conan, or The Ellen Show, but rest assured
                 Nick is a true nerd at heart. He's just as happy shredding well-spec'd lines of code from a tour bus as he is
@@ -193,8 +96,9 @@
     <strong>S</strong>heets, the language that allows web pages to be styled. Other related tutorials can be found at
     <a href="https://learnenough.com/">learnenough.com</a>.
 </p>
-. .
-    
+
+{%include footer.html%}
+
 </body>
 
 </html>
