--- a/css/main.css
+++ b/css/main.css
@@ -24,9 +24,11 @@ footer, header, hgroup, menu, nav, section {
 body {
   line-height: 1;
 }
+
 blockquote, q {
   quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
@@ -58,10 +60,21 @@ body{
  font-family: Helvetica, Arial, sans-serif;
 }
 
+a{
+    color: #6397b5;
+}
 
 h1{
     margin-top:0;
     font-size:7vw;
+}
+
+h2{
+    font-size: 2em;
+}
+
+p{
+    line-height: 1.5em;
 }
 
 h2 + p{
@@ -69,8 +82,9 @@ h2 + p{
     font-style: italic;
     margin: 1em auto 0;
     max-width: 70%;
-    text-align: center:
+    text-align: center;
 }
+
 
 /*HEADER STYLES*/
 
@@ -217,20 +231,93 @@ h2 + p{
     display: block;
 }
 
-
-
 /* HERO STYLES */
 .full-hero{
     background-color: #c7dbfc;
-    height:50vh;
+    background-size: cover;
+    box-sizing: border-box;
+    height:100vh;
+    padding-top: 10vh;
+}
+
+/* This makes an arrow at the bottom */
+.full-hero:after{
+    border: 20px solid;
+    border-color: #fff transparent transparent;
+    bottom: 2vh;
+    color: #fff;
+    content: "";
+    height: 0;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, 0);
+    width: 0;   
+}
+
+.hero-home{
+    background-image: url(/images/shark.jpg);
+    background-position: center top;
+}
+
+.hero-content{
+    color: white;
+    position: relative;
+    top:50%;
+    text-align: center;
+    text-transform: uppercase;
+    transform: translate(0, -50%);
+}
+
+.hero-content h1{
+    color: rgb(255, 255, 255, .8);
+    font-size: 7vh;
+    margin-bottom: 0.25em;
+}
+
+.hero-content .social-link{
+    background-color: rgba(255, 255, 255, .8);
+    color: #556c83;
+}
+
+.hero-content .social-link:hover{
+    background-color: #000;
+    color: #fff;
 }
 
 
-
-.full-hero:hover,
-.full-hero:active{
-    background-color: #d7dbfa;
+/* HOME SECTION */
+.home-section{
+    margin: 6rem auto;
+    max-width: 900px;
+    width:90vw;
 }
+
+.home-section h2{
+    margin-bottom: 1.5rem;
+    text-align: center;
+}
+
+.home-callout{
+    background-color: #000;
+    color: #fff;
+    padding: 7vh 0;
+}
+
+/* .home-callout a{
+    color: #f00;
+} */
+
+.callout-title{
+    font-size: 5.75vw;
+    text-align: right;
+    text-transform: uppercase
+
+}
+
+.callout-copy{
+    font-size: 0.8rem;
+}
+
 
 /* BIO STYLES */
 .bio-wrapper{
@@ -241,18 +328,18 @@ h2 + p{
 }
 
 .bio-box{
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     box-sizing: border-box;
     float: left;
     font-size: 1rem;
-    margin: 1%;
-    padding:0 2% 2%;
-    width: 23%;
+    margin: 6rem 0 0;
+    padding:0 3%;
+    width: 33%;
 }
 
 .bio-box .social-link{
     display: block;
-    margin: 2em 0 1em;
+    margin: 2em auto 1em;
 }
 
 .bio-box h3{
@@ -260,6 +347,7 @@ h2 + p{
     color: #fff;
     margin:-40px 0 1em;
     text-align:center;
+    text-transform: uppercase;
 }
 
 .bio-box img{
@@ -267,13 +355,9 @@ h2 + p{
 }
 
 .bio-copy{
-    font-size: 1em;
-    line-height: 1.5;
+    font-size: 0.75em;
 }
 
-.bio-copy a{
-    color: green;
-}
 
 
 
