--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,12 @@
 {% include head.html %}
 
 <body>
+
     {% include header.html %}
 
-    {{ content }}
+    <div class="content-container">
+    {{ content }}  
+    </div>
 
     {%include footer.html%}
 
