Fix home and mobile

--- a/css/main.css
+++ b/css/main.css
@@ -600,3 +600,15 @@ gallery.info h3{
     margin-top: 3em;
     padding-top: 2em;
 }
+
+/* MEDIA STYLES */
+@media (max-width:1000px){
+    html{
+        box-shadow: none;
+        padding: 0;
+    }
+
+    .post-aside{
+        display: none;
+    }
+}
