--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,8 @@ h2 + p{
     padding-left: 1em;
 }
 
-.header-nav a{
+.header-nav a,
+.drop-trigger{
     color: #fff;
 }
 
@@ -178,6 +179,103 @@ h2 + p{
     background-color: #ed6e2f;
 }
 
+/* DROPDOWN STYLES */
+
+.dropdown{
+    position: relative;
+}
+
+.dropdown:hover .drop-menu{
+    display: block;
+}
+
+.dropdown:hover .drop-trigger:after{
+    border-color: #ed6e2f transparent transparent;
+
+}
+
+.drop-trigger{
+    display: inline-block;
+    padding-right: 1.5em;
+    position: relative;
+}
+
+.drop-trigger:after{
+    border: 0.3em solid;
+    border-color: #fff transparent transparent;
+    content: "";
+    height: 0;
+    position: absolute;
+    right: 0;
+    top: 0.3em;
+    width: 0;
+}
+
+.drop-menu{
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+    display: none;
+    list-style: none;
+    padding: 1em 0 0;
+    position: absolute;
+    right: 0;
+    z-index: 9;
+}
+
+.drop-menu:before{  
+    border: 0.6em solid;
+    border-color: transparent transparent #fff;
+    content: "";
+    height: 0;
+    position: absolute;
+    right: 1em;;
+    top: -0.1em;
+    width: 0;
+}
+
+.drop-menu li{
+    background-color: #fff;
+}
+
+.drop-menu li ~ li{
+    border-top: 1px dotted rgba(0,0,0, 0.1);
+}
+
+.drop-menu li:first-child{
+    border-radius: 5px 5px 0 0;
+    color: #999;
+    font-weight: 0.5em;
+    font-weight: normal;
+    text-align: right;
+    text-transform: uppercase;
+}
+
+
+.drop-menu li:last-child{
+    border-radius: 0 0 5px 5px;
+}
+
+.drop-menu a{
+    color: #333;
+    display: block;
+    font-weight: normal;
+    padding: 0.5em 2em 0.5em 1em;
+    text-align: left;
+    text-transform: none;
+    white-space: nowrap;
+}
+
+.drop-menu a:hover{
+    background-color: rgba(0,0,0,0.1);
+    color: #333;
+}
+
+/* MOBILE MENU */
+.mobile-menu-check,
+.show-mobile-menu{
+    display: none;
+}
+
+
 /*FOOTER STYLE*/
 .footer{
     background-color: #000;
@@ -208,6 +306,16 @@ h2 + p{
     color: #ccc;
 }
 
+/* HIDE IN THE FOOTER */
+
+.footer:hover .drop-menu,
+.footer .drop-trigger:after{
+    display: none;
+}
+
+.footer .drop-trigger{
+    padding-right: 0;
+}
 
 /* COLUMN STYLES */
 .col-three{
@@ -676,4 +784,77 @@ gallery.info h3{
     .gallery .gallery-info {
         flex: 1;
     }
+    
+    .show-mobile-menu{
+        display: block;    
+        float: right;
+        font-weight: bold;
+        margin-top: 1.5vh;
+        padding: 1.5em;
+        position: relative;
+        text-transform: uppercase;
+    }
+
+    .header-nav{
+        background-color: #444;
+        box-sizing: border-box;
+        left: 0;
+        max-height: 0;
+        overflow: hidden;
+        padding: 0;
+        position: absolute;
+        top: 10vh;
+        text-align: center;
+        transition: all 0.5 ease-in-out;
+        width: 100vw;
+        z-index: 9;
+    }
+
+    .header-nav li{
+        border-color: none;
+        display: block;
+        margin-top: 1em;
+    }
+
+    .header-nav li ~ li{
+    border: none;
+    }
+
+    .header-nav li:last-child{
+        margin-bottom: 1em;
+    }
+
+    .header-nav li:first-child a{
+        color: #fff;
+    }
+    .header-nav li:first-child a:hover{
+        color: #ed6e2f;
+    }
+
+    .mobile-menu-check:checked ~ .header-nav{
+        max-height: 1000px;
+    }
+
+    .mobile-menu-check:checked ~ .show-mobile-menu:after{
+        background-color: #000;
+        color: #ed6e2f;
+        content: "CLOSE";
+        left: 0;
+        position: absolute;
+        width: 100%;
+        text-align: center;
+        text-transform: uppercase;
+
+
+    }
+    
+    /* HIDE THE DROPDOWN IN THE NAV */
+    .header-nav .drop-trigger:after{
+        display: none;
+    }
+
+    .header-nav .drop-trigger{
+        padding-right: 0;
+    }
+
 }
