--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,7 @@ body{
  flex-direction: column;
  font-family: Helvetica, Arial, sans-serif;
  min-height: 100vh;
+ width: 100vw;
 }
 
 .content-container{
