--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ body{
  flex-direction: column;
  font-family: Helvetica, Arial, sans-serif;
  min-height: 100vh;
- width: 100vw;
+ width: 100%;
 }
 
 .content-container{
