--- a/css/main.css
+++ b/css/main.css
@@ -335,7 +335,7 @@ h2 + p{
 }
 
 .col-three .col-nav{
-    flex: 0 1 15em;
+    flex: 0 1 15vw;
 }
 
 .col-three .col-content{
@@ -343,7 +343,7 @@ h2 + p{
 }
 
 .col-aside{
-    flex: 0 1 20em;
+    flex: 0 1 20vw;
 }
 
 .col-two{
@@ -351,7 +351,7 @@ h2 + p{
 }
 
 .col-two .col-aside{
-    flex: 0 0 20em;
+    flex: 0 0 20vw;
     order: 1;
 }
 
@@ -521,7 +521,7 @@ h2 + p{
 }
 
 .callout-copy{
-    flex: 0 0 45em;
+    flex: 1;
     font-size: 0.8rem;
     padding: 0 3vw;
 }
@@ -711,9 +711,7 @@ gallery.info h3{
 }
 
 /* MEDIA STYLES */
- @media (max-width: 800px) 
- 
- {
+ @media (max-width: 800px){
     html {
         box-shadow: none;
         padding: 0;
@@ -746,9 +744,11 @@ gallery.info h3{
     .home-callout {
         flex-direction: column;
     }
+    
     .callout-copy {
         flex: 1;
     }
+
     .bio-box {
         float: none;
         font-size: 1.3rem;
