--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,6 @@ a img {
 html{
     box-shadow: 0 0 0 30px #000 inset;
     padding: 0 30px;
-
 }
 
 body{
@@ -63,7 +62,6 @@ body{
  flex-direction: column;
  font-family: Helvetica, Arial, sans-serif;
  min-height: 100vh;
- width: 100%;
 }
 
 .content-container{
@@ -321,7 +319,7 @@ h2 + p{
 /* COLUMN STYLES */
 .col-three{
     display: flex;
-    flex: 1;
+    flex: 1 1 0;
 }
 
 .col{
@@ -335,7 +333,7 @@ h2 + p{
 }
 
 .col-three .col-nav{
-    flex: 0 1 15vw;
+    flex: 0 1 15em;
 }
 
 .col-three .col-content{
@@ -343,7 +341,7 @@ h2 + p{
 }
 
 .col-aside{
-    flex: 0 1 20vw;
+    flex: 0 1 20em;
 }
 
 .col-two{
@@ -351,7 +349,7 @@ h2 + p{
 }
 
 .col-two .col-aside{
-    flex: 0 0 20vw;
+    flex: 0 0 20em;
     order: 1;
 }
 
@@ -521,7 +519,7 @@ h2 + p{
 }
 
 .callout-copy{
-    flex: 1;
+    flex: 0 0 45em;
     font-size: 0.8rem;
     padding: 0 3vw;
 }
