Verify that it is the kitten image in the post breaking the layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
                     <span> - {{ page.date | date: '%B %d, %Y' }}</span>
                 </div>
         </header>
-        <!-- <aside class="post-aside">
+        <aside class="post-aside">
             <h4>Recent Posts</h4>
             <ul class="blog-title-list">
                 {% for post in site.posts limit:5 %}
@@ -32,6 +32,6 @@ layout: default
         </div>
         <footer class="post-footer">
             {{ page.postFooter }}
-        </footer> -->
+        </footer>
     </article>
 </div>
